[package]
name = "ara_yaaaay"
version = "0.1.0"
edition = "2021"

[dependencies]
adobe-cmap-parser = "0.4.1"
encoding_rs = "0.8.34"
euclid = "0.20.5"
lopdf = {version = "0.32", default-features = false, features = ["nom_parser"]}
postscript = "0.14"
type1-encoding-parser = "0.1.0"
unicode-normalization = "0.1.19"

[dev-dependencies]
ureq = "2.6.2"